--- a/pachi-exchange/src/styles/Sweepstakes.css
+++ b/pachi-exchange/src/styles/Sweepstakes.css
@@ -1,7 +1,6 @@
 .sweepstakesPage {
   width: 100%;
   height: auto;
-  overflow-x: hidden;
 }
 .sweepstakesBackground {
   width: 100%;
